--- a/CRM/views/client-entry.ejs
+++ b/CRM/views/client-entry.ejs
@@ -1,116 +1,135 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css">
+    <link rel='stylesheet' href='https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css' />
+    <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
   </head>
-  <body class="app">
-    <h1>Welcome to the Client Data Entry Page</h1>
 
-<!--Refer to "https://coreui.io/docs/components/forms/" for instruction on how to change form-->
-<main class="main">
+<body class="app sidebar-show aside-menu-show">
 
-<form id="formAddClient" name="addClient" method="post" action="/addClient">> 
+  <header class="app-header navbar">
+    <% include partials/header %>
+  </header>
 
-<!-- Client Name & Agent Assignment--> 
-<div class="form-row">
-    <div class="form-group col-md-6-auto">
-      <label for="clientName">Client Name</label>
-      <input type="name" class="form-control" id="clientName" name="clientName" placeholder="Company Name">
+  <div class="app-body">
+
+    <div class="sidebar">
+      <% include partials/sidebar %>
     </div>
-    <div class="form-group col-md-6-auto">
-      <label for="agentName">Agent Assignment</label>
-      <select class="form-control" id="agentAbbrev">
-  		<%
-        	var list = '';
-        	for (i = 0; i < agentList.length; i++) {
-        		list += '<option>' + agentList[i].agentAbbrev + '</option>';
-        	}
-  		%>
-      	<%- list %>
-	  </select>
-    </div>
-</div>
 
-<!-- Client Contact Numbers-->
-<div class="form-group">
-  <label for="clientPhone">Client Contact Numbers</label>
-    <div class="form-row">
-			<div class="col-auto">
-			  <input type="text" class="form-control" id="clientPhone" name="clientPhone" placeholder="Phone Number">
-			</div>
-			<div class="col-auto">
-			  <input type="text" class="form-control" id="clientFax" name="clientFax" placeholder="Fax Number">
-			</div>
-	</div>
-</div>
+    <main class="main mt-2 ml-3">
+      <h1> CLIENT ENTRY FORM </h1>
+      <form id="formAddClient" name="addClient" method="post" action="/addClient">
 
-<!-- Client Addresses-->  
-<div class="form-group">
-  
-  <label for="clientPhone">Client Addresses</label>
-    <div class="form-row">
-			<div class="col-md-2">
-			  <textarea class="form-control" id="clientAddress" name="clientAddress" placeholder="Company Address" rows="3"></textarea>
-			</div>
-			<div class="col-md-2">
-			  <textarea class="form-control" id="clientDelivAddress" name="clientDelivAddress" placeholder="Delivery Address" rows="3"></textarea>
-			</div>
-	</div>
-</div>
+      <!-- Client Name & Agent Assignment-->
+      <div class="form-row">
+          <div class="form-group col-md-6-auto">
+            <label for="clientName">Client Name</label>
+            <input type="name" class="form-control" id="clientName" name="clientName" placeholder="Company Name">
+          </div>
+          <div class="form-group col-md-6-auto">
+            <label for="agentName">Agent Assignment</label>
+            <select class="form-control" id="agentAbbrev">
+        		<%
+              	var list = '';
+              	for (i = 0; i < agentList.length; i++) {
+              		list += '<option>' + agentList[i].agentAbbrev + '</option>';
+              	}
+        		%>
+            	<%- list %>
+      	  </select>
+          </div>
+      </div>
 
-<!-- Client Email Address-->
-<div class="form-group">
-  <label for="inputAddress">Client Email Addresses</label>
-    <div class="form-row">
-			<div class="col-auto">
-			  <input type="email" class="form-control" id="clientEmail1" name="clientEmail1" placeholder="user1@email.com">
-			</div>
-			<div class="col-auto">
-			  <input type="email" class="form-control" id="clientEmail2" name="clientEmail2" placeholder="user2@email.com">
-			</div>
-	</div>
-</div>
+      <!-- Client Contact Numbers-->
+      <div class="form-group">
+        <label for="clientPhone">Client Contact Numbers</label>
+          <div class="form-row">
+      			<div class="col-auto">
+      			  <input type="text" class="form-control" id="clientPhone" name="clientPhone" placeholder="Phone Number">
+      			</div>
+      			<div class="col-auto">
+      			  <input type="text" class="form-control" id="clientFax" name="clientFax" placeholder="Fax Number">
+      			</div>
+      	</div>
+      </div>
 
-<!-- Client Products-->
-<div class="form-group">
-  <label for="inputAddress">Client Products</label>
-	<div class="form-row">
-		<div class="form-check form-check-inline">
-		  <input class="form-check-input" type="checkbox" name="clientProdOX" value="true">
-		  <label class="form-check-label" for="clientProdOX">OX</label>
-		</div>
-		<div class="form-check form-check-inline">
-		  <input class="form-check-input" type="checkbox" name="clientProdPP" value="true">
-		  <label class="form-check-label" for="clientProdPP">PP</label>
-		</div>
-		<div class="form-check form-check-inline">
-		  <input class="form-check-input" type="checkbox" name="clientProdTP" value="true">
-		  <label class="form-check-label" for="clientProdTP">TP</label>
-		</div>
-	</div>	
-</div>
+      <!-- Client Addresses-->
+      <div class="form-group">
 
-<!-- Client Notes-->
-<div class="form-group">
-  <label for="inputAddress2">Client Notes</label>
-    <div class="form-row">
-		<div class="col-md-4">
-			<textarea class="form-control" name="clientNotes" rows="3" placeholder="Remarks"></textarea>
-		</div>
-	</div>
-</div>
- 
-<button type="submit" class="btn btn-primary btn-lg">Submit</button>
+        <label for="clientPhone">Client Addresses</label>
+          <div class="form-row">
+      			<div class="col-md-2">
+      			  <textarea class="form-control" id="clientAddress" name="clientAddress" placeholder="Company Address" rows="3"></textarea>
+      			</div>
+      			<div class="col-md-2">
+      			  <textarea class="form-control" id="clientDelivAddress" name="clientDelivAddress" placeholder="Delivery Address" rows="3"></textarea>
+      			</div>
+      	</div>
+      </div>
 
-</form>
+      <!-- Client Email Address-->
+      <div class="form-group">
+        <label for="inputAddress">Client Email Addresses</label>
+          <div class="form-row">
+      			<div class="col-auto">
+      			  <input type="email" class="form-control" id="clientEmail1" name="clientEmail1" placeholder="user1@email.com">
+      			</div>
+      			<div class="col-auto">
+      			  <input type="email" class="form-control" id="clientEmail2" name="clientEmail2" placeholder="user2@email.com">
+      			</div>
+      	</div>
+      </div>
 
-</main>
+      <!-- Client Products-->
+      <div class="form-group">
+        <label for="inputAddress">Client Products</label>
+      	<div class="form-row">
+      		<div class="form-check form-check-inline">
+      		  <input class="form-check-input" type="checkbox" name="clientProdOX" value="true">
+      		  <label class="form-check-label" for="clientProdOX">OX</label>
+      		</div>
+      		<div class="form-check form-check-inline">
+      		  <input class="form-check-input" type="checkbox" name="clientProdPP" value="true">
+      		  <label class="form-check-label" for="clientProdPP">PP</label>
+      		</div>
+      		<div class="form-check form-check-inline">
+      		  <input class="form-check-input" type="checkbox" name="clientProdTP" value="true">
+      		  <label class="form-check-label" for="clientProdTP">TP</label>
+      		</div>
+      	</div>
+      </div>
 
+      <!-- Client Notes-->
+      <div class="form-group">
+        <label for="inputAddress2">Client Notes</label>
+          <div class="form-row">
+      		<div class="col-md-4">
+      			<textarea class="form-control" name="clientNotes" rows="3" placeholder="Remarks"></textarea>
+      		</div>
+      	</div>
+      </div>
 
+      <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+
+      </form>
+
+    </main>
+
+    <aside class="aside-menu-hidden">
+      <!-- Aside menu content here -->
+    </aside>
+
+  </div>
+  <footer class="app-footer">
+    <% include partials/footer %>
+  </footer>
 
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/@coreui/coreui/dist/js/coreui.min.js"></script>
 </body>
+
 </html>
