--- a/CRM/views/contact-entry.ejs
+++ b/CRM/views/contact-entry.ejs
@@ -1,116 +1,135 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css">
+    <link rel='stylesheet' href='https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css' />
+    <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
   </head>
-  <body class="app">
-    <h1>Welcome to the Contact Data Entry Page</h1>
 
-<!--Refer to "https://coreui.io/docs/components/forms/" for instruction on how to change form-->
-<main class="main">
+<body class="app sidebar-show aside-menu-show">
 
-<form id="formAddContact" name="addContact" method="post" action="/addContact">> 
+  <header class="app-header navbar">
+    <% include partials/header %>
+  </header>
 
-<!--
-[TODO]
-We need to implement the following fields
-(/) Client              (lookup-Client)
-(/) Contact Name        (text)            - Are we only doing 1 field for name?
-(/) Contact Position    (text)
-(/) Contact Phone       (text)
-(/) Contact Mobile      (text)
-(/) Contact Email       (email)
-(/) Contact Notes       (text)
-    Created By                             - Have to see if this is critical. Will we ask them to authenticate themselves first?
-(/) Create Date         (DateTime)
-    lastModified        (DateTime)         - How do we end up modifying this? We currently don't have any means to modify items
-    Contact Active      (Boolean)          - How do we end up changing this ever? Do we need a modify field?
---> 
+  <div class="app-body">
 
+    <div class="sidebar">
+      <% include partials/sidebar %>
+    </div>
 
-<!-- Client Visited-->
-<!-- I don't know if I should be referring to the clientID when what I actually want to show up is the clientName -->
-<div class="form-group col-md-6-auto">
-      <label for="clientID">Client</label>
-      <select class="form-control" name="clientID">
-  		<%
-        	var list = '';
-        	for (i = 0; i < clientList.length; i++) {
-        		list += '<option>' + clientList[i].clientName + '</option>';
-        	}
-  		%>
-      	<%- list %>
-	  </select>
-</div>
+    <main class="main mt-2 ml-3">
+      <h1> CONTACT ENTRY FORM </h1>
+      <form id="formAddContact" name="addContact" method="post" action="/addContact">
+
+      <!--
+      [TODO]
+      We need to implement the following fields
+      (/) Client              (lookup-Client)
+      (/) Contact Name        (text)            - Are we only doing 1 field for name?
+      (/) Contact Position    (text)
+      (/) Contact Phone       (text)
+      (/) Contact Mobile      (text)
+      (/) Contact Email       (email)
+      (/) Contact Notes       (text)
+          Created By                             - Have to see if this is critical. Will we ask them to authenticate themselves first?
+      (/) Create Date         (DateTime)
+          lastModified        (DateTime)         - How do we end up modifying this? We currently don't have any means to modify items
+          Contact Active      (Boolean)          - How do we end up changing this ever? Do we need a modify field?
+      -->
 
 
-
-<!-- Contact Name-->
-<div class="form-group">
-  <label for="clientPhone">Contact Name</label>
-    <div class="form-row">
-			<div class="col-auto">
-			  <input type="text" class="form-control" id="contactFirstName" name="contactFirstName" placeholder="First Name">
-			</div>
-			<div class="col-auto">
-			  <input type="text" class="form-control" id="contactLastName" name="contactLastName" placeholder="Last Name">
-			</div>
-	</div>
-</div>
-  
-<!-- Contact Position-->
-<div class="form-group">
-  <label for="clientPhone">Position</label>
-    <div class="form-row">
-			<div class="col-auto">
-			  <input type="text" class="form-control" id="contactPosition" name="contactPosition" placeholder="Position">
-			</div>
-	</div>
-</div>  
-  
- <!-- Contact Numbers-->
-<div class="form-group">
-  <label for="clientPhone">Contact Numbers</label>
-    <div class="form-row">
-			<div class="col-auto">
-			  <input type="text" class="form-control" id="contactPhone" name="contactPhone" placeholder="Phone Number">
-			</div>
-			<div class="col-auto">
-			  <input type="text" class="form-control" id="contactMobile" name="contactMobile" placeholder="Mobile Number">
-			</div>
-	</div>
-</div>
-
-<!-- Contact Email Address-->
-<div class="form-group">
-  <label for="inputAddress">Email Address</label>
-    <div class="form-row">
-			<div class="col-auto">
-			  <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="user@email.com">
-			</div>
-	</div>
-</div>
-
-<!-- Contact Notes-->
-<div class="form-group">
-  <label for="inputAddress2">Notes</label>
-    <div class="form-row">
-		<div class="col-md-4">
-			<textarea class="form-control" name="contactNotes" rows="3" placeholder="Remarks"></textarea>
-		</div>
-	</div>
-</div>
-
-<input class="btn btn-primary" type="submit" value="Submit">
-</form>
-
-</main>
+      <!-- Client Visited-->
+      <!-- I don't know if I should be referring to the clientID when what I actually want to show up is the clientName -->
+      <div class="form-group col-md-6-auto">
+            <label for="clientID">Client</label>
+            <select class="form-control" name="clientID">
+        		<%
+              	var list = '';
+              	for (i = 0; i < clientList.length; i++) {
+              		list += '<option>' + clientList[i].clientName + '</option>';
+              	}
+        		%>
+            	<%- list %>
+      	  </select>
+      </div>
 
 
+
+      <!-- Contact Name-->
+      <div class="form-group">
+        <label for="clientPhone">Contact Name</label>
+          <div class="form-row">
+      			<div class="col-auto">
+      			  <input type="text" class="form-control" id="contactFirstName" name="contactFirstName" placeholder="First Name">
+      			</div>
+      			<div class="col-auto">
+      			  <input type="text" class="form-control" id="contactLastName" name="contactLastName" placeholder="Last Name">
+      			</div>
+      	</div>
+      </div>
+
+      <!-- Contact Position-->
+      <div class="form-group">
+        <label for="clientPhone">Position</label>
+          <div class="form-row">
+      			<div class="col-auto">
+      			  <input type="text" class="form-control" id="contactPosition" name="contactPosition" placeholder="Position">
+      			</div>
+      	</div>
+      </div>
+
+       <!-- Contact Numbers-->
+      <div class="form-group">
+        <label for="clientPhone">Contact Numbers</label>
+          <div class="form-row">
+      			<div class="col-auto">
+      			  <input type="text" class="form-control" id="contactPhone" name="contactPhone" placeholder="Phone Number">
+      			</div>
+      			<div class="col-auto">
+      			  <input type="text" class="form-control" id="contactMobile" name="contactMobile" placeholder="Mobile Number">
+      			</div>
+      	</div>
+      </div>
+
+      <!-- Contact Email Address-->
+      <div class="form-group">
+        <label for="inputAddress">Email Address</label>
+          <div class="form-row">
+      			<div class="col-auto">
+      			  <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="user@email.com">
+      			</div>
+      	</div>
+      </div>
+
+      <!-- Contact Notes-->
+      <div class="form-group">
+        <label for="inputAddress2">Notes</label>
+          <div class="form-row">
+      		<div class="col-md-4">
+      			<textarea class="form-control" name="contactNotes" rows="3" placeholder="Remarks"></textarea>
+      		</div>
+      	</div>
+      </div>
+
+      <input class="btn btn-primary" type="submit" value="Submit">
+      </form>
+
+    </main>
+
+    <aside class="aside-menu-hidden">
+      <!-- Aside menu content here -->
+    </aside>
+
+  </div>
+  <footer class="app-footer">
+    <% include partials/footer %>
+  </footer>
 
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/@coreui/coreui/dist/js/coreui.min.js"></script>
 </body>
+
 </html>
