--- a/CRM/views/partials/sidebar.ejs
+++ b/CRM/views/partials/sidebar.ejs
@@ -39,12 +39,12 @@
       <li class="nav-title">REPORTS</li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="/home">
           <i class="nav-icon cui-map"></i> Activity Report
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="/home">
           <i class="nav-icon cui-note"></i> Event Report
         </a>
       </li>
