--- a/CRM/views/index.ejs
+++ b/CRM/views/index.ejs
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+	<link rel='stylesheet' href='https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css' />
+    <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
   </head>
   <body>
     <h1>Welcome to the New CRM</h1>
-    <h3><a href="/home">home</a></h3>
+    <h3><a href="/register">Register</a></h3>
+    <h3><a href="/login">Login</a></h3>
+
   </body>
 </html>
