Fixed filtering page for each report link, also fixed router.get for these pages and some data entry pages (could only input 1, as I got errors when I tried to put multiple)

--- a/CRM/views/contact-entry.ejs
+++ b/CRM/views/contact-entry.ejs
@@ -41,7 +41,7 @@
 
       <!-- Client Visited-->
       <!-- I don't know if I should be referring to the clientID when what I actually want to show up is the clientName -->
-      <div class="form-group col-md-6-auto">
+      <div class="form-group">
             <label for="clientID">Client</label>
             <select class="form-control" name="clientID">
         		<%
