--- a/CRM/views/partials/sidebar.ejs
+++ b/CRM/views/partials/sidebar.ejs
@@ -39,23 +39,29 @@
       <li class="nav-title">REPORTS</li>
 
       <li class="nav-item">
-        <a class="nav-link" href="/home">
+        <a class="nav-link" href="/activity-report">
           <i class="nav-icon cui-map"></i> Activity Report
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/home">
-          <i class="nav-icon cui-note"></i> Event Report
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="/visit-count-report">
           <i class="nav-icon cui-calculator"></i> Visit Count Report
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
-          <i class="nav-icon cui-calendar"></i> History Report
+        <a class="nav-link" href="/client-list-report">
+          <i class="nav-icon cui-list"></i> Client List Report
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/contact-history-report">
+          <i class="nav-icon cui-people"></i> Contact History
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/client-history-report">
+          <i class="nav-icon cui-calendar"></i> Client History
         </a>
       </li>
 
