--- a/CRM/views/contact-entry.ejs
+++ b/CRM/views/contact-entry.ejs
@@ -41,6 +41,10 @@
 
       <!-- Client Visited-->
       <!-- I don't know if I should be referring to the clientID when what I actually want to show up is the clientName -->
+
+      <div class="card w-25">
+        <div class="card-body">
+
       <div class="form-group">
             <label for="clientID">Client</label>
             <select class="form-control" name="clientID">
@@ -106,7 +110,7 @@
       <div class="form-group">
         <label for="inputAddress2">Notes</label>
           <div class="form-row">
-      		<div class="col-md-4">
+      		<div class="col">
       			<textarea class="form-control" name="contactNotes" rows="3" placeholder="Remarks"></textarea>
       		</div>
       	</div>
@@ -114,7 +118,8 @@
 
       <input class="btn btn-primary" type="submit" value="Submit">
       </form>
-
+    </div>
+  </div>
     </main>
 
     <aside class="aside-menu-hidden">
