--- a/CRM/views/partials/header.ejs
+++ b/CRM/views/partials/header.ejs
@@ -4,7 +4,5 @@
 
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel='stylesheet' href='https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css' />
-<h2> <%= user %> </h2>
-<style>
-    body    { padding-top:50px; }
-</style>
+
+<strong>Current User: </strong> <u class="text-primary"> <%= user %></u>
