--- a/CRM/views/client-entry.ejs
+++ b/CRM/views/client-entry.ejs
@@ -22,13 +22,16 @@
       <h1> CLIENT ENTRY FORM </h1>
       <form id="formAddClient" name="addClient" method="post" action="/addClient">
 
+        <div class="card w-25">
+          <div class="card-body">
+
       <!-- Client Name & Agent Assignment-->
       <div class="form-row">
-          <div class="form-group col-md-6-auto">
+          <div class="form-group col-auto">
             <label for="clientName">Client Name</label>
             <input type="name" class="form-control" id="clientName" name="clientName" placeholder="Company Name">
           </div>
-          <div class="form-group col-md-6-auto">
+          <div class="form-group col-auto">
             <label for="agentName">Agent Assignment</label>
             <select class="form-control" id="agentAbbrev">
         		<%
@@ -60,10 +63,10 @@
 
         <label for="clientPhone">Client Addresses</label>
           <div class="form-row">
-      			<div class="col-md-2">
+      			<div class="col-auto">
       			  <textarea class="form-control" id="clientAddress" name="clientAddress" placeholder="Company Address" rows="3"></textarea>
       			</div>
-      			<div class="col-md-2">
+      			<div class="col-auto">
       			  <textarea class="form-control" id="clientDelivAddress" name="clientDelivAddress" placeholder="Delivery Address" rows="3"></textarea>
       			</div>
       	</div>
@@ -105,7 +108,7 @@
       <div class="form-group">
         <label for="inputAddress2">Client Notes</label>
           <div class="form-row">
-      		<div class="col-md-4">
+      		<div class="col">
       			<textarea class="form-control" name="clientNotes" rows="3" placeholder="Remarks"></textarea>
       		</div>
       	</div>
@@ -114,6 +117,9 @@
       <button type="submit" class="btn btn-primary btn-lg">Submit</button>
 
       </form>
+
+    </div>
+  </div>
 
     </main>
 
