--- a/CRM/views/event-entry.ejs
+++ b/CRM/views/event-entry.ejs
@@ -35,15 +35,13 @@
           <div class="form-group col">
             <label for="agentID">Agent</label>
             <select class="form-control" name="agentID">
-            	<option>JV</option>
-            	<option>OFC</option>
-            	<option>FB</option>
-            	<option>DG</option>
-            	<option>LA</option>
-            	<option>RPL</option>
-            	<option>JP</option>
-            	<option>KJ</option>
-            	<option>DC</option>
+            <%
+                var list = '';
+                for (i = 0; i < locals.agents.length; i++) {
+                  list += '<option>' + locals.agents[i].agentAbbrev + '</option>';
+                }
+            %>
+              <%- list %>
       	  </select>
           </div>
       </div>
@@ -67,8 +65,8 @@
             <select class="form-control" name="clientID">
         		<%
               	var list = '';
-              	for (i = 0; i < clientList.length; i++) {
-              		list += '<option>' + clientList[i].clientName + '</option>';
+              	for (i = 0; i < locals.clients.length; i++) {
+              		list += '<option>' + locals.clients[i].clientName + '</option>';
               	}
         		%>
             	<%- list %>
