Just added required fields for data entry and reports

--- a/CRM/views/agent-entry.ejs
+++ b/CRM/views/agent-entry.ejs
@@ -41,7 +41,7 @@
         <label for="agentAbbrev">Agent Abbreviation</label>
           <div class="form-row">
       			<div class="col-auto">
-      			  <input type="text" class="form-control" id="agentAbbrev" name="agentAbbrev" placeholder="Use All Caps">
+      			  <input type="text" class="form-control" id="agentAbbrev" name="agentAbbrev" placeholder="Use All Caps"  required>
       			</div>
       	</div>
       </div>
@@ -51,10 +51,10 @@
         <label for="agentName">Agent Name</label>
           <div class="form-row">
       			<div class="col">
-      			  <input type="text" class="form-control" id="agentFirstName" name="agentFirstName" placeholder="First Name">
+      			  <input type="text" class="form-control" id="agentFirstName" name="agentFirstName" placeholder="First Name" required>
       			</div>
       			<div class="col">
-      			  <input type="text" class="form-control" id="agentLastName" name="agentLastName" placeholder="Last Name">
+      			  <input type="text" class="form-control" id="agentLastName" name="agentLastName" placeholder="Last Name" required>
       			</div>
       	</div>
       </div>
