--- a/CRM/views/contact-entry.ejs
+++ b/CRM/views/contact-entry.ejs
@@ -65,10 +65,10 @@
         <label for="clientPhone">Contact Name</label>
           <div class="form-row">
       			<div class="col-auto">
-      			  <input type="text" class="form-control" id="contactFirstName" name="contactFirstName" placeholder="First Name">
+      			  <input type="text" class="form-control" id="contactFirstName" name="contactFirstName" placeholder="First Name" required>
       			</div>
       			<div class="col-auto">
-      			  <input type="text" class="form-control" id="contactLastName" name="contactLastName" placeholder="Last Name">
+      			  <input type="text" class="form-control" id="contactLastName" name="contactLastName" placeholder="Last Name" required>
       			</div>
       	</div>
       </div>
@@ -78,7 +78,7 @@
         <label for="clientPhone">Position</label>
           <div class="form-row">
       			<div class="col-auto">
-      			  <input type="text" class="form-control" id="contactPosition" name="contactPosition" placeholder="Position">
+      			  <input type="text" class="form-control" id="contactPosition" name="contactPosition" placeholder="Position" required>
       			</div>
       	</div>
       </div>
