--- a/CRM/views/client-history-report.ejs
+++ b/CRM/views/client-history-report.ejs
@@ -23,7 +23,7 @@
 
       <div class="card w-25">
         <div class="card-body">
-          
+
   <!-- Select Agent from Prepopulated list of options -->
             <div class="form-row">
               <div class="form-group col-12">
@@ -46,11 +46,11 @@
         <div class="form-row">
           <div class="form-group col-6">
             <label for="inputEmail4">Date Start</label>
-            <input type="date" class="form-control" id="date-start-input" placeholder="Email">
+            <input type="date" class="form-control" id="date-start-input" placeholder="Email" required>
           </div>
           <div class="form-group col-6">
             <label for="inputPassword4">Date End</label>
-            <input type="date" class="form-control" id="date-end-input" placeholder="Password">
+            <input type="date" class="form-control" id="date-end-input" placeholder="Password" required>
           </div>
         </div>
 
