--- a/CRM/views/contact-history-report.ejs
+++ b/CRM/views/contact-history-report.ejs
@@ -60,11 +60,11 @@
         <div class="form-row">
           <div class="form-group col-6">
             <label for="inputEmail4">Date Start</label>
-            <input type="date" class="form-control" id="date-start-input" placeholder="Email">
+            <input type="date" class="form-control" id="date-start-input" placeholder="Email" required>
           </div>
           <div class="form-group col-6">
             <label for="inputPassword4">Date End</label>
-            <input type="date" class="form-control" id="date-end-input" placeholder="Password">
+            <input type="date" class="form-control" id="date-end-input" placeholder="Password" required>
           </div>
         </div>
 
