--- a/CRM/views/event-entry.ejs
+++ b/CRM/views/event-entry.ejs
@@ -30,7 +30,7 @@
       <div class="form-row">
           <div class="form-group col">
             <label for="clientName">Date</label>
-            <input type="date" class="form-control" id="eventDate" name="eventDate">
+            <input type="date" class="form-control" id="eventDate" name="eventDate" required>
           </div>
           <div class="form-group col">
             <label for="agentID">Agent</label>
@@ -50,11 +50,11 @@
       <div class="form-row">
           <div class="form-group col">
             <label for="eventTimeIn">Time In</label>
-            <input type="time" class="form-control" id="eventTimeIn" name="eventTimeIn">
+            <input type="time" class="form-control" id="eventTimeIn" name="eventTimeIn" required>
           </div>
           <div class="form-group col">
             <label for="eventTimeOut">Time Out</label>
-            <input type="time" class="form-control" id="eventTimeOut" name="eventTimeOut">
+            <input type="time" class="form-control" id="eventTimeOut" name="eventTimeOut" required>
           </div>
       </div>
 
@@ -112,12 +112,12 @@
           <div class="form-row">
       		<div class="form-group col">
       			<select class="form-control" name="contactID1" id="contactID1">
-              <option value="" disabled selected>Select</option>      			
+              <option value="" disabled selected  required>Select</option>
             </select>
       		</div>
       		<div class="form-group col">
       			<select class="form-control" name="contactID2" id="contactID2">
-              <option value="" disabled selected>Select</option>            
+              <option value="" disabled selected>Select</option>
             </select>
       		</div>
       	</div>
@@ -138,7 +138,7 @@
         <label for="inputAddress2">Event Notes</label>
           <div class="form-row">
       		<div class="col">
-      			<textarea class="form-control" name="eventRemarks" rows="3" placeholder="Remarks"></textarea>
+      			<textarea class="form-control" name="eventRemarks" rows="3" placeholder="Remarks" required></textarea>
       		</div>
       	</div>
       </div>
