--- a/CRM/views/partials/sidebar.ejs
+++ b/CRM/views/partials/sidebar.ejs
@@ -35,6 +35,26 @@
         </a>
       </li>
 
+<!-- Quick View Links-->
+
+      <li class="nav-title">QUICK VIEW/EDIT</li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/view-client-search">
+          <i class="nav-icon cui-briefcase "></i> Clients
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/view-contact-search">
+          <i class="nav-icon cui-user"></i> Contacts
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/view-event-search">
+          <i class="nav-icon cui-calendar"></i> Events
+        </a>
+      </li>
+
 <!-- Report Links-->
       <li class="nav-title">REPORTS</li>
 
